[package]
name = "tuiper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"
hifitime = "3.9.0"
ratatui = "0.26.0"
serde = "1.0"
serde_json = "1.0"
sgp4 = "2.1.0"
ureq = { version = "2.8", features = ["json"] }
